external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/wildcard_outer_deny_all_inner_allow.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E09002]: unused variable
   ┌─ tests/move_check/warning_suppression/wildcard_outer_deny_all_inner_allow.move:10:16
   │
 2 │ #[deny(all)]
   │        --- the lint level is defined here
   ·
10 │     fun denied(b: u64) {
   │                ^ Unused parameter 'b'. Consider removing or prefixing with an underscore: '_b'

error[E09002]: unused variable
   ┌─ tests/move_check/warning_suppression/wildcard_outer_deny_all_inner_allow.move:11:13
   │
 2 │ #[deny(all)]
   │        --- the lint level is defined here
   ·
11 │         let y;
   │             ^ Unused local variable 'y'. Consider removing or prefixing with an underscore: '_y'
